# embedded-heatshrink

./: .gitignore  Cargo.toml  README.md  bench.sh  fuzz-fail-0.decompressed  fuzz-fail-0.decompressed.hex  fuzz-fail-0.hex  fuzz-fail-1.bin.decompressed  fuzz-fail-1.decompressed.hex  fuzz-fail-1.hex  fuzz.sh  heatshrink  plot.py  sanity_param_sweep.txt  test.txt.hs  tsz-compressed-data.bin.zst
fuzz/: Cargo.toml  README.md  index.html
fuzz/fuzz_targets/: fuzz_target_1.rs
src/: common.rs  heatshrink_decoder.rs  heatshrink_encoder.rs  io.rs  lib.rs
