[package]
name = "embedded-heatshrink"
version = "0.1.0"
edition = "2021"
authors = ["Jacob Trueb <jtrueb@northwestern.edu>"]
description = "A Rust port of the heatshrink library for data compression in embedded systems."
license = "MIT or Apache-2.0"
repository = "https://github.com/qsib-cbie/embedded-heatshrink"
homepage = "https://github.com/qsib-cbie/embedded-heatshrink"
documentation = "https://docs.rs/embedded-heatshrink"
keywords = ["compression", "embedded", "no_std", "heatshrink", "alloc"]
categories = ["embedded", "compression", "no-std"]
readme = "README.md"

[features]
default = []
std = []

[dependencies]

[dev-dependencies]
rayon = "1.10.0"

[[bin]]
name = "hsz"
path = "src/bin/hsz.rs"
required-features = ["std"]
